# COS3712

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Documentation.html  README.md
.zed/: debug.json  settings.json  tasks.json
Writerside/: c.tree  redirection-rules.xml
Writerside/topics/: Animations.md  Assignment-4.md  Assignment2.md  Buildings.md  Cars.md  Dependencies.md  Drones.md  Floor.md  Free-Camera.md  Getting-Started.md  Global-State.md  Menu-Overlay.md  Overview.md  Top-Down-Camera.md  objects.md  obscure.md  shaders.md  src.md  starter-topic.md
docs/: HelpTOC.json  Map.jhm  animations.html  assignment-4.html  assignment2.html  buildings.html  cars.html  config.json  dependencies.html  drones.html  floor.html  free-camera.html  getting-started.html  global-state.html  menu-overlay.html  objects.html  obscure.html  overview.html  shaders.html  src.html  top-down-camera.html
object_seperate/: CMakeLists.txt  obj_sep.cpp  read_obj.cppm  triangle.cppm  write_obj.cppm
objects/: Building1.blend  Building2.blend  Building3.blend  drone.blend  hole_building.blend  portal_building.blend  portal_building.blend1  portal_building.mtl  ship.blend  shipblend.blend
objects/chinese_tent/: license.txt  scene.gltf
shaders/: CMakeLists.txt  building.vert  floor.frag  floor.vert  object.frag  object.vert  prev_floor.vert
shaders/light/: flat.glsl
src/: Animation.cppm  Building.cppm  BuildingPipe.cppm  Camera.cppm  Drone.cppm  Floor.cppm  GlobalState.cppm  MenuOverlay.cppm  ObjectPipe.cppm  Resources.cppm  Vehicle.cppm  cos3712.cpp  menu_overlay.cppm  resources.cppm
src/resources/: Resources.cxx  resources.cxx
src/resources/objects/: Building1.mtl  Building2.mtl  Building3.mtl  chinese_tent_0.mtl  chinese_tent_1.mtl  chinese_tent_2.mtl  drone.mtl  hole_building.mtl  portal_building.mtl  ship.mtl
